# data-self-organisation-ii

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cuda.sh  oneapi.sh
old/: movements.h
old/old/: cell.cpp  movements.cpp
src/: CMakeLists.txt
src/include/: cell.h  compute.h  data.h  gate.h  general.h  history.h  in.h  input.h  movement.h  output.h  parameters.h  point.h  population.h  position.h  program.h  schema.h  schemas.h  score.h  statistics.h  vector.h
src/include/genetic/: cache.h  collisions.h  insert.h  movement.h  movements.h
src/include/genetic/templates/: genetic.h
src/include/parallel/: device.hpp  inserts.hpp  map.hpp  parameters.hpp  program.hpp  value.hpp
src/include/parallel/map/: configuration.hpp  map.hpp
src/include/sequential/: programs.h
src/include/templates/: programs.h
src/source/: cell.cpp  data.cpp  dictionary.cpp  gate.cpp  history.cpp  in.cpp  input.cpp  insert.cpp  main.cpp  movement.cpp  point.cpp  population.cpp  program.cpp  schema.cpp  schemas.cpp  score.cpp  vector.cpp
src/source/genetic/: cache.cpp  collisions.cpp  movement.cpp  movements.cpp
src/source/parallel/: collisions.cpp  device.cpp  inserts.cpp  map.cpp  program.cpp
src/source/parallel/map/: map.cpp
src/source/sequential/: programs.cpp
test/: CMakeLists.txt  device.cpp  native.cpp
test/native/: breeding.cpp  general.cpp  score.cpp  serialisation.cpp
test/parallel/: general.cpp  inserts.cpp  population.cpp
